--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,57 @@
 {
-  "name": "test-pyramid-workshops",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/jwt-decode": "^3.1.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
-  }
+    "name": "test-pyramid-workshops",
+    "private": true,
+    "version": "0.0.0",
+    "type": "commonjs",
+    "scripts": {
+        "test:watch": "jest --watch",
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "test": "jest",
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run",
+        "test:e2e": "start-server-and-test dev http://localhost:5173 cypress:run"
+    },
+    "dependencies": {
+        "jwt-decode": "^4.0.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^7.4.0"
+    },
+    "devDependencies": {
+        "@cypress/react": "^9.0.1",
+        "@cypress/webpack-dev-server": "^4.0.2",
+        "@eslint/js": "^9.21.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^29.5.14",
+        "@types/jwt-decode": "^3.1.0",
+        "@types/node": "^22.14.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/testing-library__jest-dom": "^5.14.9",
+        "@vitejs/plugin-react": "^4.3.4",
+        "buffer": "^6.0.3",
+        "core-js": "^3.41.0",
+        "cypress": "^14.3.0",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jsdom": "^26.0.0",
+        "node-fetch": "^3.3.2",
+        "process": "^0.11.10",
+        "ts-jest": "^29.3.1",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.24.1",
+        "vite": "^6.2.0",
+        "vitest": "^3.1.1"
+    }
 }
